file server done (with swagger)
